--- a/src/app/locale/translations/en.json
+++ b/src/app/locale/translations/en.json
@@ -52,7 +52,7 @@
         "cart": {
             "billed_amount_text": "*You will be charged and invoiced {total} ({code}) for this order.",
             "based_on_currency_text": "Based on {total} {code}",
-            "cart_heading": "Initiate One Time Charges",
+            "cart_heading": "Initial One Time Charges",
             "cart_sub_heading": "These are only charged once and are separate from the monthly charges.",
             "digital_item_text": "Digital Item",
             "discount_text": "Discount",
